--- a/schema/admin/patch-before.yaml
+++ b/schema/admin/patch-before.yaml
@@ -3,6 +3,8 @@
 - op: remove
   path: /paths/~1.well-known~1openid-configuration
 - op: remove
+  path: /paths/~1credentials
+- op: remove
   path: /paths/~1health~1ready
 - op: remove
   path: /paths/~1oauth2~1auth
