--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,52 +4,55 @@ services:
       context: .
     ports:
       - 8080:8080
-    # volumes:
-    #   - ./config:/etc/connector:ro
+    volumes:
+      - ./config:/etc/connector:ro
     environment:
       HYDRA_PUBLIC_SERVER_URL: http://hydra:4444
       HYDRA_ADMIN_SERVER_URL: http://hydra:4445
       HASURA_LOG_LEVEL: debug
 
   hydra:
-    restart: always
-    image: oryd/hydra:v1.11.10
-    command:
-      - serve
-      - all
-      - --dangerous-force-http
+    image: oryd/hydra:v2.2.0
+    ports:
+      - "4444:4444" # Public port
+      - "4445:4445" # Admin port
+      - "5555:5555" # Port for hydra token user
+    command: serve -c /etc/config/hydra/hydra.yml all --dev
+    volumes:
+      - type: volume
+        source: hydra-sqlite
+        target: /var/lib/sqlite
+        read_only: false
+      - type: bind
+        source: ./testdata/hydra.yml
+        target: /etc/config/hydra/hydra.yml
+    environment:
+      - DSN=sqlite:///var/lib/sqlite/db.sqlite?_fk=true
+    restart: unless-stopped
     depends_on:
       - hydra-migrate
-      - postgres
-    ports:
-      - "4444:4444"
-      - "4445:4445"
-    environment:
-      DSN: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?sslmode=disable
-      SECRETS_SYSTEM: ${SECRETS_SYSTEM}
-      OIDC_DYNAMIC_CLIENT_REGISTRATION_ENABLED: "true"
-      LOG_LEAK_SENSITIVE_VALUES: "true"
 
   hydra-migrate:
-    restart: on-failure
-    image: oryd/hydra:v1.11.10
-    depends_on:
-      - postgres
-    command: migrate sql -e --yes
+    image: oryd/hydra:v2.2.0
     environment:
-      DSN: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?sslmode=disable
-
-  postgres:
-    image: postgres:16-alpine3.18
-    restart: always
+      - DSN=sqlite:///var/lib/sqlite/db.sqlite?_fk=true
+    command: migrate -c /etc/config/hydra/hydra.yml sql -e --yes
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "10432:5432"
+      - type: volume
+        source: hydra-sqlite
+        target: /var/lib/sqlite
+        read_only: false
+      - type: bind
+        source: ./testdata/hydra.yml
+        target: /etc/config/hydra/hydra.yml
+    restart: on-failure
+  consent:
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      - HYDRA_ADMIN_URL=http://hydra:4445
+    image: oryd/hydra-login-consent-node:v2.2.0
+    ports:
+      - "3000:3000"
+    restart: unless-stopped
 
 volumes:
-  postgres_data:
+  hydra-sqlite:
