--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,8 @@ services:
       context: .
     ports:
       - 8080:8080
-    # volumes:
-    #   - ./config:/etc/connector:ro
+    volumes:
+      - ./config:/etc/connector:ro
     environment:
       HYDRA_PUBLIC_SERVER_URL: http://hydra:4444
       HYDRA_ADMIN_SERVER_URL: http://hydra:4445
